# kapa-cortex

./: .gitignore  CLAUDE.md  README.md
.claude/skills/kapa-cortex/: SKILL.md
core/: Cargo.toml
core/src/: lib.rs  main.rs
core/src/application/: analyze.rs  extract.rs  indexer.rs  mod.rs  stack.rs
core/src/domain/: entities.rs  mod.rs  model.rs  services.rs
core/src/iface/: cli.rs  daemon_client.rs  handler.rs  mcp.rs  mod.rs  protocol.rs  reporter.rs  server.rs
core/src/index/: imports.rs  mod.rs  walker.rs
core/src/infrastructure/: buck2.rs  cochange.rs  complexity.rs  ctags.rs  git.rs  hasher.rs  imports.rs  llm.rs  lsp.rs  mod.rs  sqlite.rs  tree_sitter.rs  walker.rs
core/tests/: benchmark_ab.sh  benchmark_tokens.sh  pr_splitting.rs  test_pr_scenario.sh
docs/: architecture.md  benchmark-rename-refactoring.md  cli-reference.md  mcp.md  session-summary.md
src/application/: analyze_branch.py
src/domain/service/: dependency_resolver.py  graph_queries.py
src/infrastructure/: setup.py
src/infrastructure/complexity/: analyzer.py  cached_analyzer.py  lizard_analyzer.py  scc_analyzer.py
src/infrastructure/indexer/: call_cache.py  cochange_cache.py  complexity_cache.py  ctags_indexer.py  graph_builder.py  import_cache.py  index_all.py  lsp_indexer.py
src/infrastructure/llm/: backends.py  ollama_backend.py  setup_ollama.py
src/interface/cli/: cli.py
src/presentation/: cli.py
tests/domain/: test_graph_queries.py
tests/infrastructure/: test_cached_complexity.py  test_cochange_adapter.py  test_graph_builder.py  test_index_store.py
(+17 files in other folders)
