[package]
name = "kapa-cortex-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
rmp-serde = "1"
tree-sitter = "0.22"
tree-sitter-cpp = "0.22"
tree-sitter-c = "0.21"
tree-sitter-python = "0.21"
tree-sitter-java = "0.21"
tree-sitter-go = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-rust = "0.21"
tree-sitter-typescript = "0.21"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
petgraph = "0.6"
starlark_syntax = "0.13.0"

[dev-dependencies]
tempfile = "3"
